Revise index.html with new meta tags and structure
Updated HTML structure and added meta tags for verification, theme color, and description.

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tanvox Technology</title>
+
+    <meta name="google-site-verification" content="QnNba5BUAARkWGaAqCNm93DHFQPeOSFIPHwX3NdAtfE" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Premium Software Company - Building Future-Ready Solutions" />
+    <title>Tanvox Technologies </title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
